# Alan-Code-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
alancode/: __init__.py  agent.py  settings.py
alancode/api/: cost_tracker.py  errors.py  retry.py
alancode/cli/: display.py  errors.py  main.py  repl.py  user_input.py
alancode/compact/: compact_auto.py  compact_clear.py  compact_truncate.py  prompt.py  utils.py
alancode/git_tree/: __init__.py  layout.py  memory_snapshots.py  model.py  operations.py  parser.py
alancode/gui/: __init__.py  base.py  cli_ui.py  gui_ui.py  protocol.py  scripted_ui.py  serialization.py  server.py
alancode/hooks/: __init__.py  handlers.py  registry.py
alancode/memory/: memdir.py  prompt.py
alancode/messages/: factory.py  normalization.py  serialization.py  types.py
alancode/permissions/: context.py  pipeline.py  project_rules.py
alancode/prompt/: system_prompt.py
alancode/providers/: anthropic_models.py  anthropic_provider.py  base.py  litellm_provider.py  remote_scripted_provider.py  scripted_provider.py
alancode/query/: loop.py  state.py
alancode/session/: __init__.py  session.py  state.py  transcript.py
alancode/skills/: __init__.py  builtin.py  discovery.py  parser.py  registry.py  tool_filter.py
alancode/tools/: base.py  execution.py  orchestration.py  registry.py  text_tool_parser.py
alancode/utils/: atomic_io.py  env.py  tokens.py
docs/: README.md  getting-started.md
examples/: example_1_cli_agent.py  example_3_streaming_agent.py
scripts/: alan-remote-macros.sh
tests/: conftest.py
(+81 files in other folders)
