[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alancode"
dynamic = ["version"]
description = "Alan Code — an open-source python agent inspired by Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Timothe Boulet" },
]
dependencies = [
    # Core
    "anthropic>=0.40.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    # LiteLLM (any non-Anthropic provider)
    "litellm>=1.70",
    "requests>=2.31",
    # GUI (browser mode via `--gui`)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
alancode = "alancode.cli.main:main"

[tool.hatch.version]
path = "alancode/__version__.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
